fixed alignment of footer and select

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <form>
                             <div>
                                 <label for="roast-selection">Filter Roast</label>
-                                <select id="roast-selection">
+                                <select class="ml-4" id="roast-selection">
                                     <option>All</option>
                                     <option>Light</option>
                                     <option>Medium</option>
@@ -156,7 +156,7 @@
                                 <option>Medium</option>
                                 <option>Dark</option>
                             </select>
-                            <div class="mt-2 pl-4">
+                            <div class="mt-2 pl-1">
                                 <input type="text" id="newInput" placeholder="Add Coffee Here">
                                 <input class="ml-2" type="submit" id="submit">
                             </div>
@@ -216,13 +216,13 @@
                     <label for="exampleFormControlTextarea1">Additional Feedback</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
-                <button class="btn btn-primary btn-sm" type="button">Submit</button>
+                <button class="contactSubmit btn btn-sm" type="button">Submit</button>
             </form>
         </div>
     </div>
 </div>
 
-
+<!--Footer-->
 <footer>
     <div id="footer" class="container">
         <section class="top-footer">
@@ -231,7 +231,7 @@
                 <p class="d-flex justify-content-center" href="#">Artisan Coffee</p>
             </div>
             <div class="number_add">
-                <ul>
+                <ul class="pl-0">
                     <li>+123 456 7890</li>
                     <li>1234 Main Street Anywhere</li>
                 </ul>
@@ -266,7 +266,7 @@
         </section>
         <div class="line"></div>
         <section class="bottom-footer">
-            <ul class="bf_bar_info">
+            <ul class="bf_bar_info pl-0">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Features</a></li>
                 <li><a href="#">Page Layouts</a></li>
