finished planning for presentation

--- a/Issues-encountered.html
+++ b/Issues-encountered.html
@@ -1,20 +1,13 @@
-Issues encountered on Coffee Project
+Talking points
 
-1.  We encountered an issue with our roast.selection values not matching
-the values set for our select options. It would not allow us to properly
-display the filtered results by roast. For example our property value set
-for our object in our js file contained a lower case 'l' for light, whereas
-in our HTML Light contained an upper case 'L'.
-
-2.Local Storage - type out explaination
-3.map.resize()
-
+Cory - start/show page and js up to if condition newCoffee()
+Caleb - newCoffee() end on map.resize()
+Cory - quick overview HTML CSS
 
 1.js functionality
-    *   event listener from submit to on 'keyup'
-    *   issue with roast.selection changed the case for roast type to match HTML and js
+    *   changed roast.selection changed the case for roast type to match HTML and js
     *   add coffee function:
-            - event listener to our submit button
+            - moved event listener to our submit button
             - moved e.preventDefault() to createCoffee to keep page from reloading
                 when the submit button is pressed
             - vars for event listeners addCoffeeRoast/newCoffeeName
@@ -22,6 +15,6 @@ in our HTML Light contained an upper case 'L'.
             - then if condition in addCoffee() checks if the input is not an empty string
             - then runs newCoffee() and then runs updateCoffees();
 
-2.localStorage/map.resize() - Caleb
+2.localStorage credit goes to Sam for walking me through the last portion/map.resize() - Caleb
 3.HTML & CSS- Cory
 
